--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     .result-box img {
       width: 120px;
       height: 120px;
-      margin-bottom: 5px; /* Small space below the image */
+      margin-bottom: 5px; 
     }
 
     .result-box h2 {
-      margin-top: 0; /* Remove top margin */
-      margin-bottom: 5px; /* Optional: small bottom margin */
+      margin-top: 0;
+      margin-bottom: 5px; 
       font-size: 24px;
       color: #333;
     }
